[gd_scene load_steps=22 format=2]

[ext_resource path="res://SlotMachine.gd" type="Script" id=1]
[ext_resource path="res://Assets/SlotsGameUI/bg.png" type="Texture" id=2]
[ext_resource path="res://UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/CANDARAL.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Music/ReelSpinning-Reources-176.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Music/Cleospin2-Reources-169.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Music/Cleospin3-Reources-170.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Music/Cleospin4-Reources-203.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sounds/ReelStop-resources-189.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Sounds/MaxBet-Assets-140.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/Sounds/Environment.ogg" type="AudioStream" id=11]
[ext_resource path="res://Assets/Sounds/BonusAlertBell-Resources-101.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/SlotsGameUI/winlines/1.png" type="Texture" id=13]
[ext_resource path="res://Assets/SlotsGameUI/winlines/5.png" type="Texture" id=14]
[ext_resource path="res://Assets/SlotsGameUI/winlines/9.png" type="Texture" id=15]
[ext_resource path="res://Assets/SlotsGameUI/winlines/3.png" type="Texture" id=16]
[ext_resource path="res://Assets/SlotsGameUI/winlines/7.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=1]
size = 20
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="AnimationNodeStateMachine" id=2]
graph_offset = Vector2( -841.854, 0 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=3]

[sub_resource type="Animation" id=4]
resource_name = "winlines"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("line1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false, true, false, true, false, true, false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("line5:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false, true, false, true, false, true, false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("line9:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false, true, false, true, false, true, false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("line3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false, true, false, true, false, true, false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("line7:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false, true, false, true, false, true, false, true, false ]
}

[node name="SlotMachine" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
light_mask = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 800.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 1920, 1420 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" parent="." instance=ExtResource( 3 )]
light_mask = 2

[node name="VBoxContainer" parent="UI/MarginContainer2" index="0"]
margin_right = 200.0
margin_bottom = 142.0

[node name="MarginContainer" parent="UI/MarginContainer2/VBoxContainer" index="0"]
margin_right = 200.0

[node name="FreeSpins2" parent="UI/MarginContainer2/VBoxContainer" index="1"]
margin_right = 200.0

[node name="VBoxContainer2" parent="UI/MarginContainer2" index="1"]
margin_right = 200.0
margin_bottom = 142.0

[node name="MarginContainer" parent="UI/MarginContainer2/VBoxContainer2" index="0"]
margin_right = 200.0

[node name="Label" type="Label" parent="UI"]
visible = false
margin_left = 200.0
margin_top = 579.0
margin_right = 540.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 1 )
text = "www.diegohiroshi.com"
align = 1

[node name="Tween" type="Tween" parent="."]

[node name="Timeout" type="Timer" parent="."]

[node name="Music01" type="AudioStreamPlayer" parent="." groups=["sfx"]]
stream = ExtResource( 5 )
mix_target = 1

[node name="Music02" type="AudioStreamPlayer" parent="." groups=["sfx"]]
stream = ExtResource( 6 )
mix_target = 1

[node name="Music03" type="AudioStreamPlayer" parent="." groups=["sfx"]]
stream = ExtResource( 7 )
mix_target = 1

[node name="Music04" type="AudioStreamPlayer" parent="." groups=["sfx"]]
stream = ExtResource( 8 )
mix_target = 1

[node name="ReelStop" type="AudioStreamPlayer" parent="." groups=["sfx"]]
stream = ExtResource( 9 )
volume_db = -5.0

[node name="Success" type="AudioStreamPlayer" parent="." groups=["sfx"]]
stream = ExtResource( 10 )
volume_db = -8.0
mix_target = 1

[node name="Environment" type="AudioStreamPlayer2D" parent="." groups=["sfx"]]
position = Vector2( 401.119, 445.074 )
stream = ExtResource( 11 )
volume_db = -2.5

[node name="FreeSpins" type="AudioStreamPlayer" parent="." groups=["sfx"]]
stream = ExtResource( 12 )
volume_db = -5.0

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 2 )
anim_player = NodePath("AnimationPlayer")
active = true
parameters/playback = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationTree"]
anims/winlines = SubResource( 4 )

[node name="line1" type="Sprite" parent="AnimationTree"]
visible = false
position = Vector2( 401.25, 283 )
scale = Vector2( 0.553313, 1 )
texture = ExtResource( 13 )

[node name="line5" type="Sprite" parent="AnimationTree"]
visible = false
position = Vector2( 401.25, 170 )
scale = Vector2( 0.553313, 1 )
texture = ExtResource( 14 )

[node name="line9" type="Sprite" parent="AnimationTree"]
visible = false
position = Vector2( 401.25, 390 )
scale = Vector2( 0.553313, 1 )
texture = ExtResource( 15 )

[node name="line3" type="Sprite" parent="AnimationTree"]
visible = false
position = Vector2( 401.25, 301 )
scale = Vector2( 0.553, 0.9 )
texture = ExtResource( 16 )

[node name="line7" type="Sprite" parent="AnimationTree"]
visible = false
position = Vector2( 401.25, 259.44 )
scale = Vector2( 0.553, 0.9 )
texture = ExtResource( 17 )

[connection signal="pressed" from="UI/MarginContainer/HBoxContainer/VBoxContainerCenter/HBoxContainer/LBoxContainer/BetLine/Minus" to="." method="minusBet"]
[connection signal="pressed" from="UI/MarginContainer/HBoxContainer/VBoxContainerCenter/HBoxContainer/LBoxContainer/BetLine/Plus" to="." method="plusBet"]
[connection signal="pressed" from="UI/MarginContainer/HBoxContainer/VBoxContainerCenter/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="Timeout" to="." method="_on_Timeout"]

[editable path="UI"]
